trunk/Archive2/cd/36aba0db83d79c/main.cpp
#include <memory>

int main()
{
    std::shared_ptr<int> p;
    auto x = [p] () mutable {p.reset();};
    x();
    auto y = [p]{p.reset();}
    y();
}
